Bug 789827 - Fix nullptr abuse in comm-central. r=Standard8. Bustage fix for CLOSED TREE